--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -186,9 +186,21 @@
     display: block;
     width: 100%;
     background-color: rgba(51, 51, 51, 0.5);
+    box-shadow: inset 2.5px 2.5px 2px rgba(255,255,255,0.5),  inset -2.5px -2.5px 4px rgba(0,0,0,0.4),  -0.3px -0.3px 4px rgba(0,0,0,0.5),  2px 2px 10px rgba(0,0,0,0.6);
     font-size: 40px;
     border: 0;
     cursor: pointer;
+    &:hover {
+      color: white;
+      animation-name: hover;
+      animation-duration: 2s;
+      @keyframes hover {
+        25% {box-shadow: inset 0px 0px 0px 0px;}
+        50% {box-shadow: inset 0px 0px 20px 8px;}
+        75% {box-shadow: inset 0px 0px 20px 8px;}
+        100% {box-shadow: inset 0px 0px 0px 0px;}
+      }
+    }
   }
 }
 @mixin box {
